--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -17,9 +17,12 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Assets\Items\Weapons_Summon\" />
     <Folder Include="Compat\BloodSoul\" />
     <Folder Include="Content\Items\Accessories\" />
     <Folder Include="Content\Items\Pets\" />
+    <Folder Include="Content\Items\Weapons_Summon\" />
+    <Folder Include="Content\Projectiles\Projectiles_Summon\" />
     <Folder Include="Core\Systems\MagliteSystem\" />
     <Folder Include="Core\Systems\AstronomySystem\" />
     <Folder Include="Sounds\Shadows\" />
