--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Assets\Bosses\SlimeEmperor\" />
     <Folder Include="Assets\Items\Misc_Summon\" />
     <Folder Include="Assets\Walls\Magike\" />
     <Folder Include="Assets\WorldGeneration\Shrines\" />
