--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Content\Items\Misc_Summon\" />
     <Folder Include="Content\Projectiles\Projectiles_Summon\" />
     <Folder Include="Core\Systems\AstronomySystem\" />
+    <Folder Include="Core\Systems\MagikeSystem\Polymerizes\" />
     <Folder Include="Sounds\Shadows\" />
   </ItemGroup>
 </Project>
