改动不多 常规同步

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Content\Items\Magike\Accessorys\" />
     <Folder Include="Content\Items\Pets\" />
     <Folder Include="Content\Items\Misc_Summon\" />
+    <Folder Include="Content\Items\Nightmare\" />
     <Folder Include="Content\Projectiles\Projectiles_Summon\" />
     <Folder Include="Core\Systems\AstronomySystem\" />
     <Folder Include="Core\Systems\MagikeSystem\Polymerizes\" />
