--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "Hellstone",
     "hitbox",
     "knockback",
+    "Lerp",
     "Maglite",
     "MEGA",
     "Megashark",
@@ -45,6 +46,7 @@
     "Sacrificable",
     "SDMG",
     "Serv",
+    "Sevenside",
     "Shadewood",
     "Shlimmer",
     "sinx",
