--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Effects\AlphaGradientTrail.fx" />
+    <None Remove="Effects\NoHLGradientTrail.fx" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
