--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -17,6 +17,7 @@
     <None Remove="Effects\AlphaGradientTrail.fx" />
     <None Remove="Effects\AlphaNoHLGradientTrail.fx" />
     <None Remove="Effects\NoHLGradientTrail.fx" />
+    <None Remove="Effects\SimpleTrailNoHL.fx" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
