--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -32,6 +32,8 @@
     <Folder Include="Content\Items\Pets\" />
     <Folder Include="Content\Items\Misc_Summon\" />
     <Folder Include="Content\Projectiles\Projectiles_Summon\" />
+    <Folder Include="Content\UI\MagikeGuideBook\Introduce\" />
+    <Folder Include="Content\UI\MagikeGuideBook\Chapter1\" />
     <Folder Include="Core\Systems\AstronomySystem\" />
     <Folder Include="Core\Systems\MagikeSystem\Polymerizes\" />
     <Folder Include="Sounds\Shadows\" />
