--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -37,6 +37,7 @@
     <Folder Include="Content\Items\Magike\Accessorys\" />
     <Folder Include="Content\Items\Pets\" />
     <Folder Include="Content\Items\Misc_Summon\" />
+    <Folder Include="Content\Items\FlyingShields\" />
     <Folder Include="Content\Projectiles\Projectiles_Summon\" />
     <Folder Include="Content\UI\MagikeGuideBook\Chapter4\" />
     <Folder Include="Content\UI\MagikeGuideBook\Chapter5\" />
