--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -36,7 +36,7 @@
     <Folder Include="Assets\WorldGeneration\ShadowCastleRooms\" />
     <Folder Include="Content\Items\Magike\Armors\" />
     <Folder Include="Content\Items\Magike\Accessorys\" />
-    <Folder Include="Content\Items\Pets\" />
+    <Folder Include="Content\Items\Misc_Summon\" />
     <Folder Include="Content\Projectiles\Projectiles_Summon\" />
     <Folder Include="Content\UI\MagikeGuideBook\Chapter5\" />
     <Folder Include="Core\Systems\AstronomySystem\" />
