--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -26,6 +26,9 @@
     <None Remove="effects\StarsTrail.fx" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Assets\Bosses\SlimeEmperor\" />
     <Folder Include="Assets\Items\Misc_Summon\" />
     <Folder Include="Assets\Walls\Magike\" />
