仙灵捕手小游戏新增音效等

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -44,5 +44,6 @@
     <Folder Include="Content\UI\MagikeGuideBook\Chapter5\" />
     <Folder Include="Core\Systems\AstronomySystem\" />
     <Folder Include="Sounds\Shadows\" />
+    <Folder Include="Sounds\Fairy\" />
   </ItemGroup>
 </Project>
