宝石之国系列开始制作

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <None Remove="Effects\AlphaGradientTrail.fx" />
     <None Remove="Effects\AlphaNoHLGradientTrail.fx" />
+    <None Remove="effects\Crystal.fx" />
     <None Remove="effects\Fire.fx" />
     <None Remove="Effects\Flow.fx" />
     <None Remove="Effects\Flow2.fx" />
