--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -18,6 +18,7 @@
     <None Remove="Effects\AlphaGradientTrail.fx" />
     <None Remove="Effects\AlphaNoHLGradientTrail.fx" />
     <None Remove="effects\Crystal.fx" />
+    <None Remove="Effects\CrystalTrail.fx" />
     <None Remove="effects\Fire.fx" />
     <None Remove="Effects\Flow.fx" />
     <None Remove="Effects\Flow2.fx" />
