现在魔能仪器可以放置在4个面上
部分代码优化，部分新内容制作

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -22,6 +22,7 @@
     <None Remove="effects\Fire.fx" />
     <None Remove="Effects\Flow.fx" />
     <None Remove="Effects\Flow2.fx" />
+    <None Remove="effects\KEx2.fx" />
     <None Remove="Effects\NoHLGradientTrail.fx" />
     <None Remove="effects\ShadowLaser.fx" />
     <None Remove="effects\ShadowStars.fx" />
