修复不能进游戏，部分小修改

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -23,6 +23,8 @@
     <None Remove="Effects\Flow.fx" />
     <None Remove="Effects\Flow2.fx" />
     <None Remove="effects\KEx2.fx" />
+    <None Remove="Effects\LaserAlpha.fx" />
+    <None Remove="Effects\LaserReplaceAlpha.fx" />
     <None Remove="Effects\NoHLGradientTrail.fx" />
     <None Remove="effects\ShadowLaser.fx" />
     <None Remove="effects\ShadowStars.fx" />
