一些细节调整和BUG修复，魔能合成基本制作完成

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -30,6 +30,8 @@
     <None Remove="effects\ShadowStars.fx" />
     <None Remove="Effects\SimpleTrailNoHL.fx" />
     <None Remove="effects\StarsTrail.fx" />
+    <None Remove="localization\en-us\Mods.Coralite.Conditions.hjson" />
+    <None Remove="Localization\zh-Hans\Mods.Coralite.Conditions.hjson" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\Bosses\SlimeEmperor\" />
