--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -37,6 +37,7 @@
     <Folder Include="Assets\Walls\Magike\" />
     <Folder Include="Assets\WorldGeneration\Shrines\" />
     <Folder Include="Assets\WorldGeneration\ShadowCastleRooms\" />
+    <Folder Include="Content\Bosses\ModReinforce\PurpleVolt\" />
     <Folder Include="Content\Items\Magike\Armors\" />
     <Folder Include="Content\Items\Magike\Accessorys\" />
     <Folder Include="Content\Items\Misc_Summon\" />
