测试魔能TP实体

--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -50,4 +50,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="InnoVault">
+      <HintPath>..\InnoVault\bin\Debug\net8.0\InnoVault.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
