--- a/Coralite.csproj
+++ b/Coralite.csproj
@@ -30,6 +30,7 @@
     <None Remove="effects\ShadowStars.fx" />
     <None Remove="Effects\SimpleTrailNoHL.fx" />
     <None Remove="effects\StarsTrail.fx" />
+    <None Remove="localization\en-us\Mods.Coralite.Knowledges.hjson" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\Bosses\SlimeEmperor\" />
