--- a/.editorconfig
+++ b/.editorconfig
@@ -112,7 +112,7 @@ csharp_style_prefer_readonly_struct_member = true:suggestion
 csharp_prefer_braces = true:silent
 csharp_prefer_simple_using_statement = true:suggestion
 csharp_style_namespace_declarations = block_scoped:silent
-csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_method_group_conversion = false:silent
 csharp_style_prefer_primary_constructors = true:suggestion
 csharp_style_prefer_top_level_statements = true:silent
 
@@ -231,6 +231,9 @@ dotnet_naming_style.begins_with_i.word_separator =
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 csharp_prefer_system_threading_lock = true:suggestion
 csharp_prefer_static_anonymous_function = true:suggestion
+
+# IDE0200: 删除不必要的 lambda 表达式
+dotnet_diagnostic.IDE0200.severity = silent
 
 [*.{cs,vb}]
 dotnet_style_qualification_for_field = false:silent
